--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,6 +10,7 @@
     #38ef7d,
     #11998e
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-size: cover /* contain */ /* width in px/em/rem ie 50rem 20rem */
 }
 
 .sticky {
